# Osmia

./: .gitignore  LICENSE  README.md
Source/: CMakeLists.txt  ConsoleApp.Debug.props  ConsoleApp.Generic.props  ConsoleApp.Release.props  DynamicLib.Common.props  DynamicLib.Debug.props  DynamicLib.Release.props  Executable.Common.props  Executable.Debug.props  Executable.Release.props  Generic.Common.props  Generic.Debug.props  Generic.Release.props  Osmia.sln  StaticLib.Common.props  StaticLib.Debug.props  StaticLib.Release.props
Source/Database/: Callback.h  Database.h  Database.vcxproj  Database.vcxproj.filters  Field.h  QueryResult.h  SqlStatement.h
Source/Database/Implementation/: ConcreteDatabase.cpp  ConcreteDatabase.h  QueryResultImpl.h  RetrySqlOp.h  SqlConnection.cpp  SqlConnection.h  SqlDelayThread.cpp  SqlDelayThread.h  SqlOperations.cpp  SqlOperations.h  SqlPreparedStatement.cpp  SqlPreparedStatement.h  SqlStatementImpl.cpp  SqlStatementImpl.h
Source/Database/Implementation/DatabaseODBC/: DatabaseODBC.cpp  DatabaseODBC.h  DatabaseODBC.vcxproj  DatabaseODBC.vcxproj.filters  QueryResultODBC.cpp  QueryResultODBC.h
Source/Database/Implementation/DatabaseODBC/Debug/: DatabaseODBC.dll.recipe  DatabaseODBC.ilk  vc143.idb
Source/Database/Implementation/DatabaseODBC/Debug/DatabaseODBC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  DatabaseODBC.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Source/Database/Implementation/DatabaseODBC/Release/: DatabaseODBC.dll.recipe
Source/Database/Implementation/DatabaseODBC/Release/DatabaseODBC.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Lib.read.1.tlog
Source/Database/Implementation/DatabaseODBC/x64/Debug/: vc143.idb
Source/Database/Implementation/DatabaseODBC/x64/Debug/DatabaseODBC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DatabaseODBC.lastbuildstate
Source/Forwarder/: Forwarder.vcxproj  Forwarder.vcxproj.filters  HiveExt.cpp  solutiondir_debug.txt
Source/Forwarder/Release/: Forwarder.dll.recipe  HiveExt.dll.recipe  HiveExt.iobj  HiveExt.ipdb
Source/Forwarder/Release/Forwarder.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Source/HiveExt/: HiveExt.vcxproj  Main.cpp  pch.h
Source/HiveExt/Release/HiveExt.tlog/: HiveExt.lastbuildstate
Source/Osmia/: DirectOsmiaApp.cpp  DirectOsmiaApp.h  Main.cpp  Osmia.vcxproj  Osmia.vcxproj.filters
Source/OsmiaLib/: ExtStartup.cpp  ExtStartup.h  OsmiaApp.cpp  OsmiaApp.h  OsmiaLib.vcxproj  OsmiaLib.vcxproj.filters
Source/OsmiaLib/DataSource/: AsyncQueryPool.cpp  AsyncQueryPool.h  LuaDB.cpp  LuaDB.h  LuaEngine.cpp  LuaEngine.h
Source/Shared/: Shared.vcxproj  Shared.vcxproj.filters
Source/Shared/Common/: Exception.h  Timer.cpp  Timer.h  Types.h
Source/Shared/Server/: AppServer.cpp  AppServer.h
Source/Shared/Server/Config/: IniConfig.cpp  IniConfig.h
Source/Shared/Server/Log/: ArmaConsoleChannel.cpp  ArmaConsoleChannel.h  IConsoleChannel.h  Logger.cpp  Logger.h  OsmiaConsoleChannel.cpp  OsmiaConsoleChannel.h
